wrap up chaos mode, fix some more bugs

--- a/src/components/Chaos/styles.module.scss
+++ b/src/components/Chaos/styles.module.scss
@@ -5,10 +5,66 @@
     top: 0;
     left: 0;
 
-    .test {
-        width: 300px;
-        height: 300px;
-        background-color: red;
-        color: white;
+    .greeting {
+        color: $yellow;
+        text-transform: uppercase;
+        position: fixed;
+        left: 0;
+        top: 30%;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        font-size: 120px;
+        line-height: 120px;
+        z-index: 0;
+
+        @include tablet {
+            padding: 20px;
+            font-size: 60px;
+            line-height: 60px;
+        }
+    }
+
+    .xoxo {
+        color: $yellow;
+        text-transform: uppercase;
+        position: fixed;
+        left: 0;
+        top: 72%;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        z-index: 0;
+    }
+
+    .chaosImageContainer {
+
+        width: 236px;
+        height: 332px;
+        z-index: 99;
+
+        @include tablet {
+            width: 198px;
+            height: 140px;
+        }
+
+        .chaosImage {
+            width: auto;
+            height: 332px;
+
+            @include tablet {
+                height: 140px;
+            }
+    
+            img, video {
+                width: auto;
+                height: 332px;
+                border-radius: 20px;
+
+                @include tablet {
+                    height: 140px;
+                }
+            }
+        }
     }
 }
