--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -52,7 +52,8 @@
         z-index: -1;
 
         @include tablet {
-            filter: blur(12px);
+            filter: blur(5px);
+            transform: scale(1.1);
         }
     }
 }
